--- a/Admin_MasterPage.master
+++ b/Admin_MasterPage.master
@@ -6,13 +6,16 @@
 <head runat="server">
     <title>Trang quản trị Việt Nhật</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/admin_css/vendor.css" />
-    <link rel="stylesheet" href="/admin_css/app-blue.css" />
-    <link href="/admin_css/admin_style.css" rel="stylesheet" />
-    <link href="/admin_css/datepicker.min.css" rel="stylesheet" />
+
+    <link href="admin_css/app-blue.css" rel="stylesheet" />
+    <link href="admin_css/admin_style.css" rel="stylesheet" />
+    <link href="admin_css/datepicker.min.css" rel="stylesheet" />
     <link href="css/Lan.css" rel="stylesheet" />
+    <link href="admin_css/datepicker.min.css" rel="stylesheet" />
     <script src="/admin_js/sweetalert.min.js"></script>
+    <link href="fontawesome-free-6.2.1-web/css/all.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/admin_images/logo_mamnon.png" />
+    <link href="admin_css/vendor.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="headlink" runat="server"></asp:ContentPlaceHolder>
 </head>
 <body>
@@ -23,6 +26,10 @@
             justify-content:space-between;*/
             float: right;
             padding-right: 5px;
+        }
+
+        .logdropdown:hover dropdown-menu{
+            display:block;
         }
 
         .notification {
@@ -53,6 +60,23 @@
                 width: 17%;
             }
         }
+
+        .Danhmuc {
+            font-size: 16px;
+        }
+
+        .profile:hover .dropdown-menu{
+            display:block;
+        }
+
+        .profile{
+            padding: 14% 0;
+        }
+
+        .ddm{
+            top:75%;
+        }
+        .
     </style>
     <form id="form1" runat="server">
         <asp:ScriptManager ID="smScriptManager" runat="server"></asp:ScriptManager>
@@ -86,19 +110,15 @@
                                     <span runat="server"><%=thongbaoNgoaiKhoa%></span>
                                 </i>
                             </a>
-                            <%-- <a class="notification col-md-3 col-sm-3 col-xs-4" title="Đăng ký xe">
-                                <i class="fa fa-bus" aria-hidden="true">
-                                    <span runat="server"><%=thongbaoDKXe%></span>
-                                </i>
-                            </a>--%>
+
                             <a class="notification col-md-3 col-sm-3 col-xs-4" href="/admin-danh-sach-dang-ky-dong-phuc" title="Đăng ký đồng phục">
                                 <i class="fa fa-user-plus" aria-hidden="true">
-                                    <span runat="server"><%=thongbaoDKDongPhuc%></span>
+                                    <%--<span runat="server"><%=thongbaoDKDongPhuc%></span>--%>
                                 </i>
                             </a>
                             <a class="notification col-md-3 col-sm-3 col-xs-4" href="/admin-gop-y-tu-phu-huynh" title="Thư góp ý từ phụ huynh">
                                 <i class="fa fa-envelope" aria-hidden="true">
-                                    <span runat="server"><%=thongbaoThuGopY%></span>
+                                    <%--<span runat="server"><%=thongbaoThuGopY%></span>--%>
                                 </i>
                             </a>
                         </div>
@@ -109,7 +129,7 @@
                                 </li>
                                 <li id="bl_congvannoibo" runat="server" class="notifications new">
                                     <a href="#" data-toggle="dropdown"><i class="fa fa-bell"></i><sup>
-                                        <span class="counter" runat="server" id="Span2"><%=count_congvannoibo %></span>
+                                        <%--<span class="counter" runat="server" id="Span2"><%=count_congvannoibo %></span>--%>
                                     </sup></a>
                                     <div class="dropdown-menu notifications-dropdown-menu">
                                         <ul class="notifications-container">
@@ -119,7 +139,7 @@
                                                         <div class="img" style="background-image: url('/admin_images/avatardefault.png')"></div>
                                                     </div>
                                                     <div class="body-col">
-                                                        <p><span class="accent">Thầy</span> có <span><%=count_congvannoibo %></span> công văn nội bộ cần duyệt </p>
+                                                        <%--<p><span class="accent">Thầy</span> có <span><%=count_congvannoibo %></span> công văn nội bộ cần duyệt </p>--%>
                                                     </div>
                                                 </a>
                                             </li>
@@ -128,7 +148,7 @@
                                 </li>
                                 <li id="bl_congvanmoi" runat="server" class="notifications new">
                                     <a href="#" data-toggle="dropdown"><i class="fa fa-bell"></i><sup>
-                                        <span class="counter" runat="server" id="Span1"><%=count_congvanmoi %></span>
+                                        <%--<span class="counter" runat="server" id="Span1"><%=count_congvanmoi %></span>--%>
                                     </sup></a>
                                     <div class="dropdown-menu notifications-dropdown-menu">
                                         <ul class="notifications-container">
@@ -138,7 +158,7 @@
                                                         <div class="img" style="background-image: url('/admin_images/avatar.jpg')"></div>
                                                     </div>
                                                     <div class="body-col">
-                                                        <p><span class="accent">Thầy</span> có <span><%=count_congvanmoi %></span> công văn mới </p>
+                                                        <%--<p><span class="accent">Thầy</span> có <span><%=count_congvanmoi %></span> công văn mới </p>--%>
                                                     </div>
                                                 </a>
                                             </li>
@@ -147,7 +167,7 @@
                                 </li>
                                 <li id="bl_dugio" runat="server" class="notifications new" hidden>
                                     <a href="#" data-toggle="dropdown"><i class="fa fa-bell"></i><sup>
-                                        <span class="counter" runat="server" id="txtNotification"><%=count %></span>
+                                        <%--<span class="counter" runat="server" id="txtNotification"><%=count %></span>--%>
                                     </sup></a>
                                     <div class="dropdown-menu notifications-dropdown-menu">
                                         <ul class="notifications-container">
@@ -157,7 +177,7 @@
                                                         <div class="img" style="background-image: url('/admin_images/avatar.jpg')"></div>
                                                     </div>
                                                     <div class="body-col">
-                                                        <p><span class="accent">Thầy</span> có <span><%=count %></span> đăng kí dự giờ mới </p>
+                                                        <%--<p><span class="accent">Thầy</span> có <span><%=count %></span> đăng kí dự giờ mới </p>--%>
                                                     </div>
                                                 </a>
                                             </li>
@@ -165,12 +185,12 @@
                                     </div>
                                 </li>
                                 <li class="profile dropdown">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <a class="logdropdown nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                         <div class="img" style="background-image: url('/admin_images/avatardefault.png')"></div>
                                         <span class="name"><%=adminName %></span></a>
-                                    <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <a class="dropdown-item" href="/admin-ho-so-thong-tin"><i class="fa fa-user pr-1"></i>Profile</a>
-                                        <a class="dropdown-item" href="/admin-change-password"><i class="fa fa-key  pr-1"></i>Change Password </a>
+                                    <div class="ddm dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
+                                        <a class="dropdown-item" href="/website_PhuHuynhTheoDoiTre/admin_page/admin_Profile.aspx"><i class="fa fa-user pr-1"></i>Profile</a>
+                                        <a class="dropdown-item" href="/website_PhuHuynhTheoDoiTre/admin_page/admin_ChangePassword.aspx"><i class="fa fa-key  pr-1"></i>Change Password </a>
                                         <%-- <a class="dropdown-item" href="/admin-setting"><i class="fa fa-gear icon"></i>Setting</a>
                                         <div class="dropdown-divider"></div>--%>
                                         <a runat="server" id="btnLogout" class="dropdown-item" onserverclick="btnLogout_ServerClick"><i class="fa fa-power-off pr-1"></i>Logout</a>
@@ -188,7 +208,7 @@
                             </div>
                             <nav class="menu">
                                 <ul class="nav metismenu" id="sidebar-menu">
-                                    <asp:Repeater ID="rpModule" runat="server" OnInit="rpModule_Init" OnItemDataBound="rpModule_ItemDataBound">
+                                    <%--<asp:Repeater ID="rpModule" runat="server" OnInit="rpModule_Init" OnItemDataBound="rpModule_ItemDataBound">
                                         <ItemTemplate>
                                             <li class="<%#Eval("open0") %>">
                                                 <a href="#"><i class="fa fa-th-large"></i><%#Eval("module_name") %><i class="fa arrow"></i></a>
@@ -201,7 +221,49 @@
                                                 </ul>
                                             </li>
                                         </ItemTemplate>
-                                    </asp:Repeater>
+                                    </asp:Repeater>--%>
+                                    <li>
+                                        <a class="Danhmuc"><i class="fa-solid fa-table-cells-large"></i>Thông Báo<i class="fa arrow"></i></a>
+                                        <ul>
+                                            <li>Thông Báo Trường
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="Danhmuc"><i class="fa-solid fa-table-cells-large"></i>Quản lý ngoại khoá<i class="fa arrow"></i></a>
+                                        <ul>
+                                            <li>Thông Báo Trường
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="Danhmuc"><i class="fa-solid fa-table-cells-large"></i>Quản lý ăn sáng<i class="fa arrow"></i></a>
+                                        <ul>
+                                            <li>Thông Báo Trường
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="Danhmuc"><i class="fa-solid fa-table-cells-large"></i>Quản lý dặn thuốc<i class="fa arrow"></i></a>
+                                        <ul>
+                                            <li>Thông Báo Trường
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="Danhmuc"><i class="fa-solid fa-table-cells-large"></i>Điểm danh<i class="fa arrow"></i></a>
+                                        <ul>
+                                            <li>Thông Báo Trường
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="Danhmuc"><i class="fa-solid fa-table-cells-large"></i>Quản lý sức khoẻ<i class="fa arrow"></i></a>
+                                        <ul>
+                                            <li>Thông Báo Trường
+                                            </li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
@@ -379,13 +441,13 @@
             </div>
             <asp:ContentPlaceHolder ID="hifooter" runat="server">
             </asp:ContentPlaceHolder>
-            <script src="/admin_js/vendor.js"></script>
-            <script src="/admin_js/app.js"></script>
-            <script src="/admin_js/Sortable.js"></script>
-            <script src="/admin_js/sweetalert.min.js"></script>
-            <script src="/admin_js/datepicker.min.js"></script>
-            <script src="/admin_js/datepicker.en.js"></script>
-            <script src="/admin_js/azia.js"></script>
+            <script src="admin_js/vendor.js"></script>
+            <script src="admin_js/app.js"></script>
+            <script src="admin_js/Sortable.js"></script>
+            <script src="admin_js/sweetalert.min.js"></script>
+            <script src="admin_js/datepicker.min.js"></script>
+            <script src="admin_js/datepicker.en.js"></script>
+            <script src="admin_js/azia.js"></script>
 
 
 
@@ -411,3 +473,4 @@
     </form>
 </body>
 </html>
+
