--- a/Website_MasterPage.master
+++ b/Website_MasterPage.master
@@ -1078,7 +1078,7 @@
         <footer>
             <div class="main_footer">
                 <div class="co_footer_1">
-                    <h4 class="title">GIÁO DỤC VIỆT NHẬT</h4>
+                    <h4 class="title">GIÁO DỤC LÀI-TOẢN-PHƯỢNG</h4>
                     <div class="list_ul">
                         <div class="list_li">
                             <div class="icon_not_hover">
